--- a/src/styles/baseline.scss
+++ b/src/styles/baseline.scss
@@ -35,8 +35,13 @@ button {
     margin: 0;
     padding: 0;
 }
-body {
+body , html, #root {
+    height: 100%;
 }
+#root {
+    overflow: hidden;
+}
+
 
 ul {
     list-style: none;
